# jira-worklog

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/agent-memory/code-improvement-advisor/: MEMORY.md  project_context.md
.claude/agents/: code-improvement-advisor.md
app/: console.py  main.py
app/routers/: api.py
app/schemas/: log_request.py
app/service/: jira_service.py
static/: index.html
