[project]
name = "jira-worklog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "certifi==2025.1.31",
    "click==8.3.0",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.117.1",
    "h11==0.16.0",
    "idna==3.10",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "python-dotenv==1.0.1",
    "httpx>=0.27.0",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.36.0",
]
